fix metric table height in dashpage, add dashpage header on mobile

--- a/src/Aspire.Dashboard/Components/Pages/Metrics.razor.css
+++ b/src/Aspire.Dashboard/Components/Pages/Metrics.razor.css
@@ -153,9 +153,16 @@
 }
 
 ::deep .metric-table-container {
-    height: 40vh;
     overflow-y: auto;
     width: 100%;
+}
+
+::deep .metric-standalone-tab > .metric-table-container {
+    height: 40vh;
+}
+
+::deep .metric-dashpage-tab > .metric-table-container {
+    max-height: 40vh;
 }
 
 @media (min-width: 768px) {
